app/prod/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-loadbalancer
  namespace: prod
spec:
  selector:
    app.kubernetes.io/name: podinfo
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 9898
