app/prod/traefik-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`traefik.example.com`)"
      kind: Rule
      middlewares: []
      services:
        - name: api@internal
          kind: TraefikService
